# website-seo-skill

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SKILL.md  pyproject.toml
.github/workflows/: test.yml
agents/: openai.yaml
assets/: charts.js  report-template.html  report.css
config/: agency.yaml  default.yaml  ecommerce.yaml  local-business.yaml  publisher.yaml  saas.yaml
examples/: full-audit.yaml  quick-audit.yaml
references/: aeo-rules.md  citation-methodology.md  evidence-methodology.md  geo-rules.md  limitations.md  operating-guide.md  scoring-methodology.md  seo-rules.md
schemas/: audit-input.schema.json  finding.schema.json  report.schema.json  score.schema.json
scripts/: audit.py  compare.py  deduplicate.py  discover.py  generate_report.py  normalize.py  prioritize.py  score.py  validate.py
scripts/adapters/: ai_citations.py  base.py  internal_crawler.py  pagespeed.py  schema_validator.py  server_logs.py
search_visibility_auditor/: __init__.py  audit.py  browser_cdp.py  cli.py  compare.py  crawler.py  models.py  reporting.py  rules.py  scoring.py  security.py  utils.py  validation.py
search_visibility_auditor/adapters/: __init__.py  aeo_geo.py  ai_citations.py  ai_readiness.py  base.py  internal_crawler.py  pagespeed.py  source_project.py
tests/: test_aeo_geo.py  test_aggregation.py  test_ai_readiness.py  test_browser_cdp.py  test_deduplicate.py  test_normalize.py  test_pdf.py  test_report.py  test_rules.py  test_scoring.py  test_security.py  test_source_project.py  test_validation.py
(+10 files in other folders)
